--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Actions Status](https://github.com/maximefremow/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/maximefremow/frontend-project-46/actions)",
   "main": "index.js",
   "bin": {
-    "gendiff": "bin/gendiff.js"
+    "gendiff": "/bin/gendiff.js"
   },
   "type": "module",
   "scripts": {
