--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/maximefremow/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/maximefremow/frontend-project-46/actions)",
-  "main": "index.js",
+  "main": "src/genDiff.js",
   "bin": {
     "gendiff": "/bin/gendiff.js"
   },
